# google-deep-research-agent

./: README.md  pyproject.toml  requirements.txt  server.py
google_search_agent/: agent.py  google-search-api.py
