[tool.poetry]
name = "google-search-agent"
version = "0.1.0"
description = "A Google Custom Search agent that uses Router API for search requests"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "google_search_agent"}]

[tool.poetry.scripts]
google-search-agent = "google_search_agent.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
mypy = "^1.5.0"
ruff = "^0.0.287"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py310"

